--- a/bangover-logging-tests/pom.xml
+++ b/bangover-logging-tests/pom.xml
@@ -35,21 +35,19 @@
 		<dependency>
 			<groupId>cloud.bangover.logging</groupId>
 			<artifactId>bangover-logging</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>cloud.bangover</groupId>
 			<artifactId>bangover-commons-testkit</artifactId>
-			<version>0.0.1</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>cloud.bangover.text</groupId>
 			<artifactId>bangover-text-processing-testkit</artifactId>
-			<version>0.0.1</version>
 			<scope>test</scope>
 		</dependency>
 
